scripts/incorrect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incorrect-ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-1.kind.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
